_sass/_post_layout.scss
:root {
    --h1-size: 30px;
}

.post-title {
    color: var(--title);
    font-size: var(--h1-size);
    font-family: var(--font-family);
    margin: 0px;
}

h1 {
    color: var(--title);
    font-size: var(--h1-size);
    font-family: var(--font-family);
}

h2 {
    color: var(--title);
}

blockquote, .code-block {
    margin: 5px;
    margin-left: 0;

    padding: 1px;
    padding-left: 20px;

    border-width: 0;
    border-left-width: 5px;
    border-color: var(--border-callout);
    border-style: solid;
    border-radius: 10px;

    font-weight: 500;

    background: var(--bg-callout);

    @media (prefers-color-scheme: dark) {
        color: white;
    }
}

.info {
    border-color: var(--border-info);
    background: var(--bg-info);
}

.code-block {
    border-color: var(--border-code);
    background: var(--bg-code);
}

